Wed Sep 19 12:00:04 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added BCB5 to some places as supported/used compiler

        * ace/Future.h:
        * ace/Test_and_Set.h:
          Removed the ACE_EXPORT from the templates ACE_Future_Holder and
          ACE_Test_and_Set

        * ace/Service_Config.{h,cpp}:
          Changed the type of the members be_a_daemon_ and no_static_svcs_
          from char to int

Tue Sep 18 13:57:36 2001  Carlos O'Ryan  <coryan@uci.edu>

        * */Makefile:
        * */Makefile.*:
          Updated dependencies, some of the paths were absolute leading to
          ambiguities in parallel builds.

Tue Sep 18 12:18:26 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/footprint_stats.sh:
          Fixed bug in footprint charts generation.

Tue Sep 18 10:50:15 2001  Carlos O'Ryan  <coryan@uci.edu>

        * html/index.html:
          Add COS Event and COS Notification services to the index.

Mon Sep 17 19:00:00 2001  Irfan Pyarali  <irfan@cs.wustl.edu>

        * ace/OS.h:

          - THR_SCOPE_PROCESS and THR_SCOPE_SYSTEM were not defined
            for NT.  Added them.

          - Moved the following definitions of VxWorks around such
            that these defines are available even when PACE is not
            used.

            THR_INHERIT_SCHED
            THR_EXPLICIT_SCHED
            THR_SCHED_IO
            THR_SCOPE_SYSTEM
            THR_SCOPE_PROCESS

        * ace/OS.cpp: LinuxThreads do not have support for
          PTHREAD_SCOPE_PROCESS; only PTHREAD_SCOPE_SYSTEM is supported.
          Therefore, PTHREAD_SCOPE_PROCESS is ignored when setting the
          thread scheduling scope.

        * ace/Sample_History.cpp: Added accessors for <sample_count> and
          <max_samples>.

        * bin/auto_run_tests.lst: Added new RTCORBA tests.  Removed
          Minimum CORBA dependency on these tests.

Mon Sep 17 13:49:07 2001  Carlos O'Ryan  <coryan@uci.edu>
