@@ -75,6 +75,16 @@
 	  Additional configuration options and protocols for TAO.
 	</P>
       </LI>
+      <LI><P><A HREF="tao/rtportableserver/index.html">TAO_RTPortableServer:
+	  </A>
+	  The Portable Object Adapter with RT-CORBA support
+	</P>
+      </LI>
+      <LI><P><A HREF="tao/rtcorba/index.html">TAO_RTCORBA:
+	  </A>
+	  Aditional components to support RT-CORBA
+	</P>
+      </LI>
     </UL>
 
     <hr>
